tests/paczka1/fuzzy1/90413371.err
Error in line 24: jTQhj8G A671 39,4
Error in line 28: 2C3PIHsyj A671 98,9
Error in line 30: 2C3PIHsyj A879 254,02
Error in line 27: jTQhj8G A599 66,0
Error in line 34: S642 A879 38,7
Error in line 26: 3N4s9SWICsA S642 256,2
